# pg_email_opt

./: CMakeLists.txt  README.md  install_postgresql16.sh  pg_email_opt--1.0.sql  pg_email_opt.c  pg_email_opt.control  sync_pgsql.bash  uninstall_postgresql.sh
myutils/: common.c  common.h  domain.c  domain.h  ip.c  ip.h  local.c  local.h
test/: test.bash
test/expect/: test001-insert-correct.out  test002-op.out  test003-index.out
test/sql/: clean.sql  init.sql  test001-insert-correct.sql  test001-insert-wrong.sql  test002-op.sql  test003-index.sql
